<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">老人手环</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pedometer">计步</string>
    <string name="steps">步数</string>
    <string name="pedometerHis">计步历史</string>
    <string name="sport_time">运动时间</string>
    <string name="kaloria">卡路里</string>
    <string name="heart_rate">心率</string>
    <string name="sleep">睡眠质量</string>
    <string name="health_scan">健康扫描</string>
    <string name="kaloria_his">消耗能力历史</string>
    <string name="pedometer_his">步数历史</string>
    <string name="heartRate_his">心率历史</string>
    <string name="sleep_his">睡眠历史</string>
    <string name="sport_his">运动时间历史</string>
    <string name="healthy_his">健康扫描历史</string>
    <string name="healthyAdvice">健康建议</string>
    <string name="healthyAdviceCollect">健康收藏</string>
    <string name="healthyshu">健康指数</string>
    <string name="healthyAdviceDetail">健康详情</string>
    <string name="healthyAdviceCollectDetail">健康收藏详情</string>
    <string name="inputCode">输入验证码</string>
    <string name="registerInfo">基本信息</string>
    <string name="name">姓名</string>
    <string name="phoneNum">手机号码</string>
    <string name="EXname">紧急联系人姓名</string>
    <string name="EXphoneNum">紧急联系人手机号码</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="color">#ffffff</string>
    <string name="history">历史</string>
    <string name="code">输入验证码</string>
    <string name="codeAagin">再次输入验证码</string>
    <string name="pederColor">#4682B4</string>
    <string name="caloriaColor">#f8bc27</string>
    <string name="sportTimeColor">#1d6bf1</string>
    <string name="HeartRateColor">#FF0000</string>
    <string name="sleepColor">#ab45fc</string>
    <string name="healthScanColor">#03ab35</string>
    <string name="bloodsugar1">餐前mmol/L</string>
    <string name="bloodsugar2">餐后mmol/L</string>
    <string name="bloodPressure">高压mmHg</string>
    <string name="lowbloodPressure">低压mmHg</string>
    <string name="weightting">体重kg</string>
    <string name="todayhealtystate">健康状况</string>
    <string name="healthstatehis">健康状况历史</string>
    <string name="aimpercent">目标完成率</string>
    <string name="todaystep">今日步数</string>
    <string name="gentlereminder">温馨提示</string>
    <string name="hour">小时</string>
    <string name="sleep_achieve_rate">睡眠达成率</string>
    <string name="sleep_low_time">浅睡时间</string>
    <string name="sleep_deep_time">深睡时间</string>
    <string name="today_sport_time">今日运动时间</string>
    <string name="today_caloria">当日卡路里</string>
    <string name="heart_unit">次/分钟</string>
    <string name="heart_rate_his">心率(次/分钟)</string>
    <string name="minute">分钟</string>
    <string name="hig_pre">高压</string>
    <string name="low_pre">低压</string>
    <string name="fasting">餐前</string>
    <string name="poor">差</string>
    <string name="fen">分</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="postprandial">餐后</string>
    <string name="fast_bre">血糖餐前</string>
    <string name="fast_after">血糖餐后</string>
    <string name="health_data_finish">健康浏览数据处理完成</string>
    <string name="sleep_reminder">提示:睡前跟睡醒请点击手环按键</string>
    <string name="net">请检查网络是否良好</string>
    <string name="step">步</string>
    <string name="heartrate">心率值</string>
    <string name="daka">大卡</string>
    <string name="todaycaloria">今日消耗</string>
    <string name="complet_rate">完成率</string>
    <string name="taday_step">当日步数</string>
    <string name="date">日期</string>
    <string name="collect">收藏</string>
    <string name="operate">操作</string>
    <string name="healthtip">健康小贴士</string>
    <string name="healthtipcontent">      跑步的过程中,最好每15分钟就补充一定的水分，但不可太多.</string>
    <string name="gentlereminercon">   用手指按住手环的左右两边,大约15秒左右,可以测试完成</string>
    <string name="heart_rate_con">      成年人每分钟心跳大约是七八十次,但在60到100次之间都属正常</string>
    <string name="sleep_tip_content">       锻炼身体，强度以微微出汗为宜，每次30分钟以上，持之以恒，有助人睡</string>
    <string name="sure">确定</string>

</resources>
