<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#778899"  >
    <com.xiao.smartband.view.TitleView
        android:id="@+id/titleview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
  <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
    	android:background="@drawable/stepsbg"
    	android:orientation="vertical">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/heart_ratebg">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="1.0"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10sp">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gentlereminder"
            android:textSize="22sp"
            android:gravity="center"/>
       <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gentlereminercon"
            android:textSize="22sp"
            android:gravity="center"/>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="1.0"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/heart_current"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heartrate"
            android:textSize="25dp"
            android:gravity="center"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView 
            android:id="@+id/tvheartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="35dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#FB4C6C"/>
             <TextView 
            android:id="@+id/ddd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12dp"
            android:layout_toRightOf="@id/tvheartRate"
            android:visibility="invisible"/>
             <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_unit"
            android:textSize="22dp"
            android:layout_below="@id/ddd"
            android:textStyle="bold"
            android:layout_toRightOf="@id/tvheartRate"
            android:layout_marginLeft="2sp"
            android:textColor="#FB4C6C"/>
        </RelativeLayout>
        <TextView 
            android:id="@+id/tvheartRateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_marginTop="10sp">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthtip"
            android:textSize="25dp"
            android:gravity="center"/>
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate_con"
            android:textSize="22sp"/>
    </LinearLayout>
    </LinearLayout>
   </LinearLayout>
</LinearLayout>
