<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#E9ECEF">
    
    <com.xiao.smartband.view.TitleView
        android:id="@+id/titleview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
	
    <TextView 
        android:id="@+id/tvdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
	    android:layout_marginTop="20dp"
	    android:textSize="22dp"/>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="20dp">
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/blood_pressure"/>
	    <EditText
	    android:id="@+id/etbloodPressure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:hint="@string/bloodPressure"
        android:numeric="integer"
        android:textColor="#ffffff"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="20dp"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/blood_pressure"/>
	    <EditText
	    android:id="@+id/etbloodPressureLow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:hint="@string/lowbloodPressure"
        android:textColor="#ffffff"
        android:numeric="integer"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="20dp"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/blood_sugar"/>
	    <EditText
	    android:id="@+id/etbloodSugar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:hint="@string/bloodsugar1"
        android:textColor="#ffffff"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="20dp">
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/blood_sugar"/>
	    <EditText
	    android:id="@+id/etbloodSugarAfter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:hint="@string/bloodsugar2"
        android:textColor="#ffffff"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	
    <TextView
        android:id="@+id/tvsure"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:text="@string/sure"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="22dp"
        android:background="@drawable/textview_style"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    
</LinearLayout>
