<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <com.xiao.smartband.view.TitleView2
        android:id="@+id/titleview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="20dp"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/nameicon"/>
	    <EditText
	    android:id="@+id/etname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5sp"
        android:hint="@string/name"
        android:textColor="#ffffff"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="5dp"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/phone_num"/>
	    <EditText
	    android:id="@+id/etnum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5sp"
        android:hint="@string/phoneNum"
        android:textColor="#ffffff"
        android:numeric="integer"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="5dp"
	    >
	    <LinearLayout 
	    android:layout_width="0sp"
	    android:layout_weight="1.0"
	    android:layout_height="wrap_content"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/age"/>
	    <TextView
	    android:id="@+id/tvage"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5sp"
        android:textColor="#ffffff"
        android:hint="@string/age"
        android:gravity="center"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="0sp"
	    android:layout_weight="1.0"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/sex"/>
	    <TextView
	        android:id="@+id/tvsex"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5sp"
        android:hint="@string/sex"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="5dp"
	    >
	    <LinearLayout 
	    android:layout_width="0sp"
	    android:layout_weight="1.0"
	    android:layout_height="wrap_content"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/height"/>
	    <TextView
	        android:id="@+id/tvheight"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5sp"
        android:textColor="#ffffff"
        android:hint="@string/height"
        android:gravity="center"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="0sp"
	    android:layout_weight="1.0"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/weight"/>
	    <TextView
	        android:id="@+id/tvweight"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:hint="@string/weight"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="5dp"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/nameicon"/>
	    <EditText
	    android:id="@+id/eturgentname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5sp"
        android:hint="@string/EXname"
        android:textColor="#ffffff"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="5dp"
	    >
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:background="@drawable/phone_num"/>
	    <EditText
	    android:id="@+id/eturgentnum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5sp"
        android:hint="@string/EXphoneNum"
        android:textColor="#ffffff"
        android:numeric="integer"
        android:background="@drawable/nameinput"/>
	</LinearLayout>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <CheckBox 
	        android:id="@+id/checkbox_agree"
	    	android:layout_width="0dp"
	    	style="@style/mystyle"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.3"
			android:gravity="center"
	    />
        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_weight="0.8"
        android:text="已阅读并同意"       
    	android:textColor="#000000"
        />
        <TextView
        android:id="@+id/argee_pro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="#4169E1"
        android:layout_weight="1.0"
        />
    </LinearLayout>
</LinearLayout>

	<TextView
	    android:id="@+id/tvbasic_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="15sp"
        android:textSize="18sp"
    	android:background="@drawable/next"
        android:gravity="center"/>
</RelativeLayout>
