<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#778899"  >
    <com.xiao.smartband.view.TitleView
        android:id="@+id/titleview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/sportbg"
	    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="1.0"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical"
        android:layout_marginTop="10sp">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:gravity="center">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sport_aim"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aimpercent"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView 
            android:id="@+id/tvsportPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#1897ED"
            android:textStyle="bold"
            android:textSize="35dp"
            android:gravity="center"/>
             <TextView 
            android:id="@+id/ddd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:textSize="12sp"
            android:layout_toRightOf="@id/tvsportPercent"
            android:visibility="invisible"/>
             <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:textColor="#1897ED"
            android:textStyle="bold"
            android:layout_below="@id/ddd"
            android:textSize="22dp"
            android:layout_toRightOf="@id/tvsportPercent"
            android:layout_marginLeft="2sp"/>
        </RelativeLayout>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="1.0"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sport_current"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_sport_time"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <TextView 
            android:id="@+id/tvsportTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            android:textSize="35dp"
            android:textColor="#1897ED"
            android:gravity="center"/>
             <TextView 
            android:id="@+id/ddd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12sp"
            android:layout_toRightOf="@id/tvsportTime"
            android:visibility="invisible"/>
             <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textStyle="bold"
            android:textColor="#1897ED"
            android:layout_below="@id/ddd"
            android:textSize="22dp"
            android:layout_toRightOf="@id/tvsportTime"
            android:layout_marginLeft="2sp"/>
             
              
              
        </RelativeLayout>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthtip"
            android:textSize="25dp"
            android:gravity="center"/>
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthtipcontent"
            android:textSize="22dp"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
